--- a/src/css/Log_in.css
+++ b/src/css/Log_in.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;700;900&display=swap');
+@import './_loader.css';
 
 :root {
   --brand: #B5693A;
