--- a/src/css/AppHome.css
+++ b/src/css/AppHome.css
@@ -25,6 +25,16 @@
   box-sizing: border-box;
 }
 
+.apphome-title {
+  all: unset;
+  display: block;
+  font-size: 1rem;
+  font-weight: 600;
+  color: #8a5d4b;
+  margin-bottom: 0.6rem;
+  
+}
+
 html {
   scroll-behavior: smooth;
   /* גלילה חלקה */
